--- a/Publications.html
+++ b/Publications.html
@@ -6467,7 +6467,7 @@ function recaptchaOnload() {
 						<br/>
 						Veronica Sundstedt, Yan Hu, Patrik Arlos, Shahrooz Abghari, Prashant Goswami, Kurt Tutschku, Majed Elwardy, Chaoming Wang, Bowen Qin
 						<br/><i>3rd Workshop on Immersive Visualization Laboratories – Past, Present and Future (IVL), IEEE VR </i> 2025 <br/>
-						<a href="" target="_blank">[<font color="#0547f6">PDF</font>]</a>					
+						<a href="https://bth.diva-portal.org/smash/get/diva2:1953862/FULLTEXT01.pdf" target="_blank">[<font color="#0547f6">PDF</font>]</a>					
 						<br/><br/><br/><br/><br/>
 				</li>			
 </ul>				
