--- a/Publications.html
+++ b/Publications.html
@@ -6456,7 +6456,7 @@ function recaptchaOnload() {
 				<li> <IMG BORDER="0" align="left"width="128" height="75" style="margin-right:20px" SRC="Publications_files/CVM_2025.png"/>
 						<b>Immersive Analytics Meets Artificial Intelligence: A Systematic Review</b>
 						<br/>
-						Chaoming Wang, Valeria Garro, Veronica Sundstedt, Prashant Goswami
+						Chaoming Wang, Valeria Garro, Veronica Sundstedt, Yan Hu, Prashant Goswami
 						<br/><i>Computational Visual Media <font color="IndianRed"><strong>Journal</strong></font> (Accepted) </i> 2025 <br/>
 						<a href="" target="_blank">[<font color="#0547f6">PDF</font>]</a>					
 						<br/><br/><br/><br/><br/>
