--- a/Supervision.html
+++ b/Supervision.html
@@ -6214,6 +6214,12 @@ function recaptchaOnload() {
  <li><span class="fgColor" style="color:#070efa;"><a data-linkto="{&quot;type&quot;:&quot;Url&quot;,&quot;src&quot;:&quot;https://scholar.google.com/citations?user=87g_0KgAAAAJ&amp;hl=en&quot;,&quot;inNewWin&quot;:true}" href="https://scholar.google.com/citations?user=87g_0KgAAAAJ&amp;hl=en" target="_blank"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Peng Cong</font></font></a></span><font style="vertical-align: inherit;"><font style="vertical-align: inherit;"> (Main supervisor 2022-2024, Co-supervised with Guohua Bai 2018-2022 , Discontinued)</font></font></li> 
 </ul> 
 
+<h5><span class="fontSize" style="font-size: 16px; line-height: inherit; letter-spacing: inherit;style=color: rgb(100, 134, 255);">Research:</span></h5> 
+<p><u>Current</u></p> 
+<ul> 
+ <li><span class="fgColor" style="color:#070efa;"><a data-linkto="{&quot;type&quot;:&quot;Url&quot;,&quot;src&quot;:&quot;https://www.linkedin.com/in/venkata-sai-abhiram-akula-a41276217/?originalSubdomain=in/&amp;hl=en&quot;,&quot;inNewWin&quot;:true}" href="https://www.linkedin.com/in/venkata-sai-abhiram-akula-a41276217/?originalSubdomain=in" target="_blank"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Venkata Abhiram Akula</font></font></a></span><font style="vertical-align: inherit;"><font style="vertical-align: inherit;"> </font></font></li> 
+<li>
+
 <h3><span class="fontSize" style="font-size: 16px; line-height: inherit; letter-spacing: inherit;">Civilingenjör/Master thesis:</span></h3> 
 <p><u>Current (2024):</u></p> 
 <ul> 
