--- a/Supervision.html
+++ b/Supervision.html
@@ -6223,8 +6223,8 @@ function recaptchaOnload() {
 <h3><span class="fontSize" style="font-size: 16px; line-height: inherit; letter-spacing: inherit;">Civilingenjör/Master thesis:</span></h3> 
 <p><u>Current (2024):</u></p> 
 <ul> 
- <li><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Rasmus Petersson \& Pontus Östryd </font></font></li>
-<li><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Nicolas Elvstål Ångnell (with Veronica Sundstedt \& Yan Hu)</font></font></li>
+ <li><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Rasmus Petersson &amp; Pontus Östryd </font></font></li>
+<li><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Nicolas Elvstål Ångnell (with Veronica Sundstedt &amp; Yan Hu)</font></font></li>
 
 </ul> 
 <p>&nbsp;</p> 
