--- a/PeerReviewing.html
+++ b/PeerReviewing.html
@@ -6195,6 +6195,7 @@ function recaptchaOnload() {
 		
 <p>Editor roles in journals</p>
 <ul>
+	<li> Editorial Board Member for Journal of Game Studies (2025-) </li>
 	<li> Guest Associate Editor: Special issue on <a href="https://www.frontiersin.org/research-topics/25084/acquiring-exploring-and-spreading-cultural-heritage-with-immersive-technologies" target="_blank"><u>Cultural Heritage with Immersive Technologies</u> (with Ruggero Pintus, Alberto Jaspe-Villanueva)</a>, Frontiers in Virtual Reality Journal (2022)</li>
 	<li> Guest Associate Editor: Special issue on <a href="https://www.mdpi.com/journal/education/special_issues/Education_VR" target="_blank"><u>Higher Education and Its Improvement through Virtual Reality</u> (with Yan Hu)</a>, Education Sciences (2022-2023) </li>
 	<li> Review Editor: <a href="https://www.frontiersin.org/journals/computer-science/sections/computer-graphics-and-visualization#editorial-board" target="_blank"><u>Computer Graphics and Visualization section</u></a>, Frontiers in Computer Science Journal (2022-now) </li>
