--- a/PeerReviewing.html
+++ b/PeerReviewing.html
@@ -6209,6 +6209,7 @@ function recaptchaOnload() {
 	<li>International Conference on 3D Web Technology (Web3D) 2025 (Siena, Italy) </li> 
 	<li>IEEE CTSoc Gaming, Entertainment and Media (IEEE GEM) 2025 (Kaohsiung, Taiwan)</li>
 	<li>Computer Graphics Theory and Applications (GRAPP) 2025 (Porto, Portugal)</li>
+	<li>International Conference on Digital Image Processing and Vision (ICDIPV) 2025 (Copenhagen, Denmark)</li>
 	<li>International Conference on Fog and Mobile Edge Computing (FMEC) 2025 (Tampa, USA)</li>
 	<li>International Conference on Web Information Systems and Technologies (WEBIST) 2025 (Marbella, Spain)</li> 	
 	<li>Applications and Systems of Visual Paradigms (VISUAL, IARIA) 2025 (Lisbon, Portugal)</li>
