--- a/index.html
+++ b/index.html
@@ -6397,13 +6397,14 @@ function recaptchaOnload() {
 <!--		</div>   --!>
 		<div id="el-124102" class="element text-element  "> 
 		<div class="text-content"><ul>
+	<li><span class="fontSize blinking" style="font-size: 12px; line-height: 1;">July 2025: I am a Guest Editor for our special issue in the &nbsp;<a href="https://www.mdpi.com/journal/jimaging/special_issues/F78Q27VD57" target="_blank"><u>Journal of Imaging(MDPI)</u></a> on "Beyond Reality: Advancements in Computer Graphics for Immersive Metaverse Experiences"</span></li>
 	<li><span class="fontSize blinking" style="font-size: 12px; line-height: 1;">Feb 2025: I have been promoted to the Biträdande Professor position!</span></li>
 	<li><span class="fontSize blinking" style="font-size: 12px; line-height: 1;">Feb 2025: I am now a member of the IEEE Consumer Technology Society (CTSoc) <a href="https://ctsoc.ieee.org/technical/technical-committees/ent-tc.html?view=article&id=307:ent-tc-members&catid=21" target="_blank"><u> Entertainment and Gaming Technical Committee (ENT TC) </u></a></span></li>
 	<li><span class="fontSize blinking" style="font-size: 12px; line-height: 1;">Jun 2024: Our paper "<strong>Parallel spatiotemporally adaptive DEM-based snow simulation</strong>" is accepted at High Performance Graphics 2024</span></li>
 	<li><span class="fontSize blinking" style="font-size: 12px; line-height: 1;">Mar 2024: Our paper "<strong>Exploring the Effects of Foveated Rendering on Virtual Reality Game Graphics</strong>" is accepted at IEEE GEM 2024</span></li>
 	<li><span class="fontSize blinking" style="font-size: 12px; line-height: 1;">Feb 2024: Our State-of-the-Art Report (STAR) on "<strong>Snow and Ice Animation Methods in Computer Graphics</strong>" and an Education paper is accepted at Eurographics 2024!</span></li>
 	<li><span class="fontSize blinking" style="font-size: 12px; line-height: 1;">2023: One paper accepted at iCord'23, Frontiers in Computer Science, IPTA '23, SAIS '23, each</span></li>
-	<li><span class="fontSize blinking" style="font-size: 12px; line-height: 1;">Feb 2022: I am a Guest Editor for our special issue in the &nbsp;<a href="https://www.mdpi.com/journal/education/special_issues/Education_VR" target="_blank"><u>Education Sciences Journal(MDPI)</u></a> on "Higher Education and Its Improvement through Virtual Reality"</span></li>	
+		
 
 <!--		<li><span class="fontSize blinking" style="font-size: 12px; line-height: 1;">Sep 2021: I am serving as a Guest Associate Editor for a special issue on &nbsp;<a href="https://www.frontiersin.org/research-topics/25084/acquiring-exploring-and-spreading-cultural-heritage-with-immersive-technologies" target="_blank"><u>Cultural Heritage with Immersive Technologies</u></a> for the Frontiers in Virtual Reality Journal </span></li>-->
 <!--	<li><span class="fontSize" style="font-size: 12px; line-height: 1;">March 2021: Our paper "<strong>A Polarizing Filter Function for Real-Time Rendering</strong>" with Viktor Enfeldt is accepted in the Journal of Computer Graphics Techniques (JCGT)</span></li>-->
