--- a/Publications.html
+++ b/Publications.html
@@ -6436,6 +6436,14 @@ function recaptchaOnload() {
 		
 <h2 style="padding-left:25px;"><strong>2025</strong></h2> 
 <ul style="list-style: none; line-height: 120%">
+				<li> <IMG BORDER="0" align="left"width="128" height="75" style="margin-right:20px" SRC="Publications_files/PCG_FTC_2025"/>
+						<b>Identifying Abnormalities in Heart Sound Data Using Machine Learning with Interpretability</b>
+						<br/>
+						Surya Pothuri, Lakhan Kumar Sundur Purushotham, Prashant Goswami, Santosh Jagtap, Jayant Karve
+						<br/><i>Future Technologies Conference (Accepted) </i> 2025 <br/>
+						<a href="" target="_blank">[<font color="#0547f6">PDF</font>]</a>					
+						<br/><br/><br/><br/><br/>
+				</li>	
 				<li> <IMG BORDER="0" align="left"width="128" height="75" style="margin-right:20px" SRC="Publications_files/ICED25.png"/>
 						<b>Identifying the needs of low-income angioplasty patients and caregivers to inform the design of a support platform</b>
 						<br/>
