--- a/Publications.html
+++ b/Publications.html
@@ -6440,7 +6440,7 @@ function recaptchaOnload() {
 						<b>Identifying Abnormalities in Heart Sound Data Using Machine Learning with Interpretability</b>
 						<br/>
 						Surya Pothuri, Lakhan Kumar Sundur Purushotham, Prashant Goswami, Santosh Jagtap, Jayant Karve
-						<br/><i>Future Technologies Conference (Accepted) </i> 2025 <br/>
+						<br/><i>Future Technologies Conference (FTC), To Appear </i> 2025 <br/>
 						<a href="" target="_blank">[<font color="#0547f6">PDF</font>]</a>					
 						<br/><br/><br/><br/><br/>
 				</li>	
@@ -6448,7 +6448,7 @@ function recaptchaOnload() {
 						<b>Identifying the needs of low-income angioplasty patients and caregivers to inform the design of a support platform</b>
 						<br/>
 						Saurabh Rahul Sardar, Santosh Jagtap, Prashant Goswami, Jayant Karve
-						<br/><i>International Conference on Engineering Design (Accepted) </i> 2025 <br/>
+						<br/><i>International Conference on Engineering Design (ICED), To Appear </i> 2025 <br/>
 						<a href="" target="_blank">[<font color="#0547f6">PDF</font>]</a>					
 						<br/><br/><br/><br/><br/>
 				</li>	
