--- a/Publications.html
+++ b/Publications.html
@@ -6456,7 +6456,7 @@ function recaptchaOnload() {
 						<b>Personalized Smart Immersive XR Environments: A Systematic Literature Review</b>
 						<br/>
 						Nan Huang, Prashant Goswami, Veronica Sundstedt, Yan Hu, Abbas Cheddad
-						<br/><i>The Visual Computer <font color="IndianRed"><strong>Journal</strong></font>  (Accepted) </i> 2025 <br/>
+						<br/><i>The Visual Computer <font color="IndianRed"><strong>Journal</strong></font>, To Appear </i> 2025 <br/>
 						<a href="https://link.springer.com/article/10.1007/s00371-025-03887-9" target="_blank">[<font color="#0547f6">PDF</font>]</a>					
 						<br/><br/><br/><br/><br/>
 				</li>	
@@ -6465,7 +6465,7 @@ function recaptchaOnload() {
 						<b>Immersive Analytics Meets Artificial Intelligence: A Systematic Review</b>
 						<br/>
 						Chaoming Wang, Valeria Garro, Veronica Sundstedt, Yan Hu, Prashant Goswami
-						<br/><i>Computational Visual Media <font color="IndianRed"><strong>Journal</strong></font> (Accepted) </i> 2025 <br/>
+						<br/><i>Computational Visual Media <font color="IndianRed"><strong>Journal</strong></font>, To Appear </i> 2025 <br/>
 						<a href="" target="_blank">[<font color="#0547f6">PDF</font>]</a>					
 						<br/><br/><br/><br/><br/>
 				</li>	
