--- a/Publications.html
+++ b/Publications.html
@@ -6466,7 +6466,7 @@ function recaptchaOnload() {
 						<br/>
 						Chaoming Wang, Valeria Garro, Veronica Sundstedt, Yan Hu, Prashant Goswami
 						<br/><i>Computational Visual Media <font color="IndianRed"><strong>Journal</strong></font>, To Appear </i> 2025 <br/>
-						<a href="" target="_blank">[<font color="#0547f6">PDF</font>]</a>					
+						<a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=11060026" target="_blank">[<font color="#0547f6">PDF</font>]</a>					
 						<br/><br/><br/><br/><br/>
 				</li>	
 				
