--- a/Supervision.html
+++ b/Supervision.html
@@ -6199,7 +6199,6 @@ function recaptchaOnload() {
 <ul> 
  <li><span class="fgColor" style="color:#070efa;"><a data-linkto="{&quot;type&quot;:&quot;Url&quot;,&quot;src&quot;:&quot;https://www.bth.se/eng/staff/nan-huang-nhl/&amp;hl=en&quot;,&quot;inNewWin&quot;:true}" href="https://www.bth.se/eng/staff/nan-huang-nhl/" target="_blank"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Nan Huang</font></font></a></span><font style="vertical-align: inherit;"><font style="vertical-align: inherit;"> (Main supervisor, co-supervised with V. Sundstedt, A. Cheddad, Y. Hu)</font></font></li> 
  <li><span class="fgColor" style="color:#070efa;"><a data-linkto="{&quot;type&quot;:&quot;Url&quot;,&quot;src&quot;:&quot;https://a.bth.se/hints/people/&amp;hl=en&quot;,&quot;inNewWin&quot;:true}" href="https://a.bth.se/hints/people/" target="_blank"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Chaoming Wang</font></font></a></span><font style="vertical-align: inherit;"><font style="vertical-align: inherit;"> (Main supervisor V. Sundstedt, co-supervisor with V. Garro, Y. Hu) </font></font></li> 
-<li><span class="fgColor" style="color:#070efa;"><a data-linkto="{&quot;type&quot;:&quot;Url&quot;,&quot;src&quot;:&quot;https://gauravraiiiitd.github.io/&amp;hl=en&quot;,&quot;inNewWin&quot;:true}" href="https://gauravraiiiitd.github.io/" target="_blank"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Gaurav Rai</font></font></a></span><font style="vertical-align: inherit;"><font style="vertical-align: inherit;"> (Visiting student Sep'24 - Feb '25, IIIT Delhi, Main supervisor Ojaswa Sharma) </font></font></li> 
 </ul> 
 <p>&nbsp;</p> 
 <p><u>Completed</u></p> 
@@ -6209,9 +6208,11 @@ function recaptchaOnload() {
 </ul> 
 
 <p>&nbsp;</p> 
-<p><u>Others</u></p> 
+<p><u>Others (Previous)</u></p> 
 <ul> 
  <li><span class="fgColor" style="color:#070efa;"><a data-linkto="{&quot;type&quot;:&quot;Url&quot;,&quot;src&quot;:&quot;https://scholar.google.com/citations?user=87g_0KgAAAAJ&amp;hl=en&quot;,&quot;inNewWin&quot;:true}" href="https://scholar.google.com/citations?user=87g_0KgAAAAJ&amp;hl=en" target="_blank"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Peng Cong</font></font></a></span><font style="vertical-align: inherit;"><font style="vertical-align: inherit;"> (Main supervisor 2022-2024, Co-supervised with Guohua Bai 2018-2022 , Discontinued)</font></font></li> 
+<li><span class="fgColor" style="color:#070efa;"><a data-linkto="{&quot;type&quot;:&quot;Url&quot;,&quot;src&quot;:&quot;https://gauravraiiiitd.github.io/&amp;hl=en&quot;,&quot;inNewWin&quot;:true}" href="https://gauravraiiiitd.github.io/" target="_blank"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Gaurav Rai</font></font></a></span><font style="vertical-align: inherit;"><font style="vertical-align: inherit;"> (Visiting student Sep'24 - Feb '25, IIIT Delhi, Main supervisor Ojaswa Sharma) </font></font></li> 
+
 </ul> 
 
 <h5><span class="fontSize" style="font-size: 16px; line-height: inherit; letter-spacing: inherit;style=color: rgb(100, 134, 255);">Research Supervision:</span></h5> 
