--- a/Publications.html
+++ b/Publications.html
@@ -6436,6 +6436,14 @@ function recaptchaOnload() {
 		
 <h2 style="padding-left:25px;"><strong>2025</strong></h2> 
 <ul style="list-style: none; line-height: 120%">
+				<li> <IMG BORDER="0" align="left"width="128" height="75" style="margin-right:20px" SRC="Publications_files/Nan-IEEE2025.png"/>
+						<b>Conceptual Design of a Personalized VR Furniture Arrangement System</b>
+						<br/>
+						Nan Huang, Prashant Goswami, Yan Hu, Veronica Sundstedt, Abbas Cheddad, Muhammad Imran
+						<br/><i>2025 IEEE International Conference On Metrology for eXtended Reality, Artificial Intelligence and Neural Engineering (MetroXRAINE), To Appear </i> 2025 <br/>
+						<a href="" target="_blank">[<font color="#0547f6">PDF</font>]</a>					
+						<br/><br/><br/><br/><br/>
+				</li>	
 				<li> <IMG BORDER="0" align="left"width="128" height="75" style="margin-right:20px" SRC="Publications_files/PCG_FTC_2025.png"/>
 						<b>Identifying Abnormalities in Heart Sound Data Using Machine Learning with Interpretability</b>
 						<br/>
@@ -6969,7 +6977,7 @@ function recaptchaOnload() {
 	<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 	<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 	<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-	<br><br><br><br><br><br><br><br><br><br><br>
+	<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 	<footer>
 	    <div id="footer-body" class="section">
 	    	<div class="container">
