--- a/Publications.html
+++ b/Publications.html
@@ -6440,7 +6440,7 @@ function recaptchaOnload() {
 						<b>Conceptual Design of a Personalized VR Furniture Arrangement System</b>
 						<br/>
 						Nan Huang, Prashant Goswami, Yan Hu, Veronica Sundstedt, Abbas Cheddad, Muhammad Imran
-						<br/><i>2025 IEEE International Conference On Metrology for eXtended Reality, Artificial Intelligence and Neural Engineering (MetroXRAINE), To Appear </i> 2025 <br/>
+						<br/><i>2025 IEEE International Conference On Metrology for eXtended Reality, Artificial Intelligence and Neural Engineering (MetroXRAINE), To Appear, </i> 2025 <br/>
 						<a href="" target="_blank">[<font color="#0547f6">PDF</font>]</a>					
 						<br/><br/><br/><br/><br/>
 				</li>	
@@ -6448,7 +6448,7 @@ function recaptchaOnload() {
 						<b>Identifying Abnormalities in Heart Sound Data Using Machine Learning with Interpretability</b>
 						<br/>
 						Surya Pothuri, Lakhan Kumar Sundur Purushotham, Prashant Goswami, Santosh Jagtap, Jayant Karve
-						<br/><i>Future Technologies Conference (FTC), To Appear </i> 2025 <br/>
+						<br/><i>Future Technologies Conference (FTC), To Appear, </i> 2025 <br/>
 						<a href="" target="_blank">[<font color="#0547f6">PDF</font>]</a>					
 						<br/><br/><br/><br/><br/>
 				</li>	
@@ -6456,7 +6456,7 @@ function recaptchaOnload() {
 						<b>Identifying the needs of low-income angioplasty patients and caregivers to inform the design of a support platform</b>
 						<br/>
 						Saurabh Rahul Sardar, Santosh Jagtap, Prashant Goswami, Jayant Karve
-						<br/><i>International Conference on Engineering Design (ICED), To Appear </i> 2025 <br/>
+						<br/><i>International Conference on Engineering Design (ICED), To Appear, </i> 2025 <br/>
 						<a href="" target="_blank">[<font color="#0547f6">PDF</font>]</a>					
 						<br/><br/><br/><br/><br/>
 				</li>	
@@ -6464,7 +6464,7 @@ function recaptchaOnload() {
 						<b>Personalized Smart Immersive XR Environments: A Systematic Literature Review</b>
 						<br/>
 						Nan Huang, Prashant Goswami, Veronica Sundstedt, Yan Hu, Abbas Cheddad
-						<br/><i>The Visual Computer <font color="IndianRed"><strong>Journal</strong></font>, To Appear </i> 2025 <br/>
+						<br/><i>The Visual Computer <font color="IndianRed"><strong>Journal</strong></font>, To Appear, </i> 2025 <br/>
 						<a href="https://link.springer.com/article/10.1007/s00371-025-03887-9" target="_blank">[<font color="#0547f6">PDF</font>]</a>					
 						<br/><br/><br/><br/><br/>
 				</li>	
@@ -6473,7 +6473,7 @@ function recaptchaOnload() {
 						<b>Immersive Analytics Meets Artificial Intelligence: A Systematic Review</b>
 						<br/>
 						Chaoming Wang, Valeria Garro, Veronica Sundstedt, Yan Hu, Prashant Goswami
-						<br/><i>Computational Visual Media <font color="IndianRed"><strong>Journal</strong></font>, To Appear </i> 2025 <br/>
+						<br/><i>Computational Visual Media <font color="IndianRed"><strong>Journal</strong></font>, To Appear, </i> 2025 <br/>
 						<a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=11060026" target="_blank">[<font color="#0547f6">PDF</font>]</a>					
 						<br/><br/><br/><br/><br/>
 				</li>	
@@ -6482,7 +6482,7 @@ function recaptchaOnload() {
 						<b>Human-Centered Intelligent Realities Laboratory</b>
 						<br/>
 						Veronica Sundstedt, Yan Hu, Patrik Arlos, Shahrooz Abghari, Prashant Goswami, Kurt Tutschku, Majed Elwardy, Chaoming Wang, Bowen Qin
-						<br/><i>3rd Workshop on Immersive Visualization Laboratories – Past, Present and Future (IVL), IEEE VR </i> 2025 <br/>
+						<br/><i>3rd Workshop on Immersive Visualization Laboratories – Past, Present and Future (IVL), IEEE VR, </i> 2025 <br/>
 						<a href="https://bth.diva-portal.org/smash/get/diva2:1953862/FULLTEXT01.pdf" target="_blank">[<font color="#0547f6">PDF</font>]</a>					
 						<br/><br/><br/><br/><br/>
 				</li>			
