--- a/PeerReviewing.html
+++ b/PeerReviewing.html
@@ -6202,11 +6202,17 @@ function recaptchaOnload() {
 	<li> Review Editor: <a href="https://www.frontiersin.org/journals/computer-science/sections/computer-graphics-and-visualization#editorial-board" target="_blank"><u>Computer Graphics and Visualization section</u></a>, Frontiers in Computer Science Journal (2022-now) </li>
 </ul>
 
+<p>Funding Proposal Review</p>
+<ul>
+<li>Spark, Swiss National Science Foundation (SNSF) </li>
+</ul>
+
 <p>&nbsp;</p>
 
 <p>I am serving/have served&nbsp;in&nbsp;the international Technical Program Committee for the following conferences:</p>
 
 <ul>
+	<li>IEEE International Conference on Intelligent Reality (ICIR) 2025 (Boston, USA) </li> 
 	<li>International Conference on 3D Web Technology (Web3D) 2025 (Siena, Italy) </li> 
 	<li>IEEE CTSoc Gaming, Entertainment and Media (IEEE GEM) 2025 (Kaohsiung, Taiwan)</li>
 	<li>Computer Graphics Theory and Applications (GRAPP) 2025 (Porto, Portugal)</li>
@@ -6318,7 +6324,7 @@ function recaptchaOnload() {
 
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-<br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 	<footer>
 	    <div id="footer-body" class="section">
 	    	<div class="container">
