--- a/PeerReviewing.html
+++ b/PeerReviewing.html
@@ -6202,6 +6202,8 @@ function recaptchaOnload() {
 	<li> Review Editor: <a href="https://www.frontiersin.org/journals/computer-science/sections/computer-graphics-and-visualization#editorial-board" target="_blank"><u>Computer Graphics and Visualization section</u></a>, Frontiers in Computer Science Journal (2022-now) </li>
 </ul>
 
+<p>&nbsp;</p>
+
 <p>Funding Proposal Review</p>
 <ul>
 <li>Spark, Swiss National Science Foundation (SNSF) </li>
