--- a/Publications.html
+++ b/Publications.html
@@ -6466,7 +6466,7 @@ function recaptchaOnload() {
 						<br/>
 						Saurabh Rahul Sardar, Santosh Jagtap, Prashant Goswami, Jayant Karve
 						<br/><i>International Conference on Engineering Design (ICED), To Appear, </i> 2025 <br/>
-						<a href="" target="_blank">[<font color="#0547f6">PDF</font>]</a>					
+						<a href="https://www.cambridge.org/core/services/aop-cambridge-core/content/view/DFD9727EA90FC816D52EC6E52FD4E4BD/S2732527X25102186a.pdf/identifying-the-needs-of-low-income-angioplasty-patients-and-caregivers-to-inform-the-design-of-a-support-platform.pdf" target="_blank">[<font color="#0547f6">PDF</font>]</a>					
 						<br/><br/><br/><br/><br/>
 				</li>	
 				<li> <IMG BORDER="0" align="left"width="128" height="75" style="margin-right:20px" SRC="Publications_files/VCJ_2025.png"/>
