--- a/Publications.html
+++ b/Publications.html
@@ -6458,7 +6458,8 @@ function recaptchaOnload() {
 						<br/>
 						Surya Pothuri, Lakhan Kumar Sundur Purushotham, Prashant Goswami, Santosh Jagtap, Jayant Karve
 						<br/><i>Future Technologies Conference (FTC), To Appear, </i> 2025 <br/>
-						<a href="" target="_blank">[<font color="#0547f6">PDF</font>]</a>					
+						<a href="" target="_blank">[<font color="#0547f6">PDF</font>]</a>		
+						<a href="https://www.youtube.com/watch?v=j13uSkVED5I" target="_blank">[<font color="#0547f6">Presentation</font>]</a>								
 						<br/><br/><br/><br/><br/>
 				</li>	
 				<li> <IMG BORDER="0" align="left"width="128" height="75" style="margin-right:20px" SRC="Publications_files/ICED25.png"/>
