--- a/Supervision.html
+++ b/Supervision.html
@@ -6192,8 +6192,14 @@ function recaptchaOnload() {
 				<div id="content-wrapper" class="container-wrapper">
 					<div id="el-124109" class="element text-element  "> 
 		<div class="text-content"><h4><strong><font style="vertical-align: inherit;color:#641E16"><font style="vertical-align: inherit;">Supervision</font></font></strong></h4> 
-<p>I am the examiner for&nbsp;DV1478 (Bachelor thesis in Game Development) and TE2501 (Master thesis in Game Development).</p> 
-<p>I am supervising following students for their thesis at BTH:</p> 
+<!--<p>I am the examiner for&nbsp;DV1478 (Bachelor thesis in Game Development) and TE2501 (Master thesis in Game Development).</p> -->
+<p>I am involved in the following supervision roles:</p> 
+<h5><span class="fontSize" style="font-size: 16px; line-height: inherit; letter-spacing: inherit;style=color: rgb(100, 134, 255);">Postdoc:</span></h5> 
+<p><u>Current</u></p> 
+<ul> 
+ <li><span class="fgColor" style="color:#070efa;"><a data-linkto="{&quot;type&quot;:&quot;Url&quot;,&quot;src&quot;:&quot;https://scholar.google.com/citations?user=AJO6YxYAAAAJ&hl=pt-BR/&amp;hl=en&quot;,&quot;inNewWin&quot;:true}" href="https://scholar.google.com/citations?user=AJO6YxYAAAAJ&hl=pt-BR" target="_blank"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Anderson Tavares</font></font></a></span><font style="vertical-align: inherit;"><font style="vertical-align: inherit;"> (Main supervisor, co-supervised with V. Sundstedt, A. Cheddad, Y. Hu)(2023-now)</font></font></li>  
+</ul> 
+<p>&nbsp;</p> 
 <h5><span class="fontSize" style="font-size: 16px; line-height: inherit; letter-spacing: inherit;style=color: rgb(100, 134, 255);">PhD student:</span></h5> 
 <p><u>Current</u></p> 
 <ul> 
@@ -6212,15 +6218,22 @@ function recaptchaOnload() {
 <ul> 
  <li><span class="fgColor" style="color:#070efa;"><a data-linkto="{&quot;type&quot;:&quot;Url&quot;,&quot;src&quot;:&quot;https://scholar.google.com/citations?user=87g_0KgAAAAJ&amp;hl=en&quot;,&quot;inNewWin&quot;:true}" href="https://scholar.google.com/citations?user=87g_0KgAAAAJ&amp;hl=en" target="_blank"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Peng Cong</font></font></a></span><font style="vertical-align: inherit;"><font style="vertical-align: inherit;"> (Main supervisor 2022-2024, Co-supervised with Guohua Bai 2018-2022 , Discontinued 2025)</font></font></li> 
 <!--<li><span class="fgColor" style="color:#070efa;"><a data-linkto="{&quot;type&quot;:&quot;Url&quot;,&quot;src&quot;:&quot;https://gauravraiiiitd.github.io/&amp;hl=en&quot;,&quot;inNewWin&quot;:true}" href="https://gauravraiiiitd.github.io/" target="_blank"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Gaurav Rai</font></font></a></span><font style="vertical-align: inherit;"><font style="vertical-align: inherit;"> (Visiting student Sep'24 - Feb '25, IIIT Delhi, Main supervisor Ojaswa Sharma) </font></font></li> -->
-
 </ul> 
+<p>&nbsp;</p> 
 
 <h5><span class="fontSize" style="font-size: 16px; line-height: inherit; letter-spacing: inherit;style=color: rgb(100, 134, 255);">Research Supervision:</span></h5> 
 <p><u>Current</u></p> 
 <ul> 
  <li><span class="fgColor" style="color:#070efa;"><a data-linkto="{&quot;type&quot;:&quot;Url&quot;,&quot;src&quot;:&quot;https://www.linkedin.com/in/venkata-sai-abhiram-akula-a41276217/?originalSubdomain=in/&amp;hl=en&quot;,&quot;inNewWin&quot;:true}" href="https://www.linkedin.com/in/venkata-sai-abhiram-akula-a41276217/?originalSubdomain=in" target="_blank"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Venkata Abhiram Akula</font></font></a></span><font style="vertical-align: inherit;"><font style="vertical-align: inherit;"> (BTH Sweden) 2025</font></font></li> 
-<li><span class="fgColor" style="color:#070efa;"><a data-linkto="{&quot;type&quot;:&quot;Url&quot;,&quot;src&quot;:&quot;}" href="" target="_blank"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">More details to follow</font></font></a></span><font style="vertical-align: inherit;"><font style="vertical-align: inherit;"> ()</font></font></li> 
+  <li><span class="fgColor" style="color:#070efa;"><a data-linkto="{&quot;type&quot;:&quot;Url&quot;,&quot;src&quot;:&quot;https://www.linkedin.com/in/venkata-sai-abhiram-akula-a41276217/?originalSubdomain=in/&amp;hl=en&quot;,&quot;inNewWin&quot;:true}" href="https://www.linkedin.com/in/venkata-sai-abhiram-akula-a41276217/?originalSubdomain=in" target="_blank"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Madhurya Sri Uppara ;amp Mithin Kumar M.</font></font></a></span><font style="vertical-align: inherit;"><font style="vertical-align: inherit;"> (BTH Sweden, JNTU) 2025</font></font></li> 
 </ul> 
+<p>&nbsp;</p> 
+
+<p><u>Collaborations</u></p> 
+<ul> 
+<li><span class="fgColor" style="color:#070efa;"><a data-linkto="{&quot;type&quot;:&quot;Url&quot;,&quot;src&quot;:&quot;}" href="" target="_blank"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;"></font></font></a></span><font style="vertical-align: inherit;">More details to follow<font style="vertical-align: inherit;"> ()</font></font></li> 
+</ul> 
+<p>&nbsp;</p> 
 
 <h3><span class="fontSize" style="font-size: 16px; line-height: inherit; letter-spacing: inherit;">Civilingenjör/Master thesis:</span></h3> 
 <p><u>Current (2025):</u></p> 
@@ -6352,7 +6365,7 @@ function recaptchaOnload() {
 	<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 	<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 	<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-	<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+	<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 	<footer>
 	    <div id="footer-body" class="section">
 	    	<div class="container">
