--- a/Supervision.html
+++ b/Supervision.html
@@ -6231,7 +6231,7 @@ function recaptchaOnload() {
 
 <p><u>Collaborations</u></p> 
 <ul> 
-<li><span class="fgColor" style="color:#070efa;"><a data-linkto="{&quot;type&quot;:&quot;Url&quot;,&quot;src&quot;:&quot;}" href="" target="_blank"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;"></font></font></a></span><font style="vertical-align: inherit;">More details to follow<font style="vertical-align: inherit;"> ()</font></font></li> 
+<li><span class="fgColor" style="color:#070efa;"><a data-linkto="{&quot;type&quot;:&quot;Url&quot;,&quot;src&quot;:&quot;}" href="" target="_blank"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;"></font></font></a></span><font style="vertical-align: inherit;">More details to follow<font style="vertical-align: inherit;"> :-)</font></font></li> 
 </ul> 
 <p>&nbsp;</p> 
 
