--- a/Supervision.html
+++ b/Supervision.html
@@ -6197,7 +6197,7 @@ function recaptchaOnload() {
 <h5><span class="fontSize" style="font-size: 16px; line-height: inherit; letter-spacing: inherit;style=color: rgb(100, 134, 255);">Postdoc:</span></h5> 
 <p><u>Current</u></p> 
 <ul> 
- <li><span class="fgColor" style="color:#070efa;"><a data-linkto="{&quot;type&quot;:&quot;Url&quot;,&quot;src&quot;:&quot;https://scholar.google.com/citations?user=AJO6YxYAAAAJ&hl=pt-BR/&amp;hl=en&quot;,&quot;inNewWin&quot;:true}" href="https://scholar.google.com/citations?user=AJO6YxYAAAAJ&hl=pt-BR" target="_blank"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Anderson Tavares</font></font></a></span><font style="vertical-align: inherit;"><font style="vertical-align: inherit;"> (Main supervisor, co-supervised with V. Sundstedt, A. Cheddad, Y. Hu)(2023-now)</font></font></li>  
+ <li><span class="fgColor" style="color:#070efa;"><a data-linkto="{&quot;type&quot;:&quot;Url&quot;,&quot;src&quot;:&quot;https://scholar.google.com/citations?user=AJO6YxYAAAAJ&hl=pt-BR/&amp;hl=en&quot;,&quot;inNewWin&quot;:true}" href="https://scholar.google.com/citations?user=AJO6YxYAAAAJ&hl=pt-BR" target="_blank"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Anderson Tavares</font></font></a></span><font style="vertical-align: inherit;"><font style="vertical-align: inherit;"> (HINTS, with others)(2025)</font></font></li>  
 </ul> 
 <p>&nbsp;</p> 
 <h5><span class="fontSize" style="font-size: 16px; line-height: inherit; letter-spacing: inherit;style=color: rgb(100, 134, 255);">PhD student:</span></h5> 
