--- a/Supervision.html
+++ b/Supervision.html
@@ -6228,7 +6228,8 @@ function recaptchaOnload() {
 <li><span class="fgColor" style="color:#070efa;"><a data-linkto="{&quot;type&quot;:&quot;Url&quot;,&quot;src&quot;:&quot;hl=en&quot;,&quot;inNewWin&quot;:true}" href="" target="_blank"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Madhurya Sri Uppara &amp; Mithin Kumar M.</font></font></a></span><font style="vertical-align: inherit;"><font style="vertical-align: inherit;"> (BTH Sweden, JNTU) 2025</font></font></li>  
 <p>&nbsp;</p> 
 
-<p><u>Collaborations</u></p> 
+<h5><span class="fontSize" style="font-size: 16px; line-height: inherit; letter-spacing: inherit;style=color: rgb(100, 134, 255);">Research Collaborations:</span></h5> 
+<p><u>Current</u></p>
 <ul> 
 <li><span class="fgColor" style="color:#070efa;"><a data-linkto="{&quot;type&quot;:&quot;Url&quot;,&quot;src&quot;:&quot;}" href="" target="_blank"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;"></font></font></a></span><font style="vertical-align: inherit;">More details to follow<font style="vertical-align: inherit;"> :-)</font></font></li> 
 </ul> 
