--- a/Supervision.html
+++ b/Supervision.html
@@ -6237,7 +6237,7 @@ function recaptchaOnload() {
 
 
 
-<h3><span class="fontSize" style="font-size: 16px; line-height: inherit; letter-spacing: inherit;">Civilingenjör/Master thesis:</span></h3> 
+<h5><span class="fontSize" style="font-size: 16px; line-height: inherit; letter-spacing: inherit;">Civilingenjör/Master thesis Supervision:</span></h5> 
 <p><u>Current (2025):</u></p> 
 <ul> 
  <li><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Oscar Milstein </font></font></li>
@@ -6293,7 +6293,7 @@ function recaptchaOnload() {
  <li>Niu Junpeng :<em> Parallel astro visualizer with Equalizer</em> (engineering project), NTU Singapore (2012 - 2013)</li> 
  <li>Rahul Mukhi : <em>Point based simplification methods</em>, University of Zürich (2010 - 2011)</li> 
 </ul> 
-<h3><span class="fontSize" style="font-size: 16px; line-height: inherit; letter-spacing: inherit;">Bachelor thesis:</span></h3> 
+<h5><span class="fontSize" style="font-size: 16px; line-height: inherit; letter-spacing: inherit;">Bachelor thesis Supervision:</span></h5> 
 <p><u>Current (2025):</u></p> 
 <ul> 
 
