--- a/Supervision.html
+++ b/Supervision.html
@@ -6236,8 +6236,7 @@ function recaptchaOnload() {
 <p>&nbsp;</p> 
 
 
-
-<h5><span class="fontSize" style="font-size: 16px; line-height: inherit; letter-spacing: inherit;">Civilingenjör/Master thesis Supervision:</span></h5> 
+<h5><span class="fontSize" style="font-size: 16px; line-height: inherit; letter-spacing: inherit;style=color: rgb(100, 134, 255);">Civilingenjör/Master thesis Supervision:</span></h5> 
 <p><u>Current (2025):</u></p> 
 <ul> 
  <li><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Oscar Milstein </font></font></li>
@@ -6293,7 +6292,9 @@ function recaptchaOnload() {
  <li>Niu Junpeng :<em> Parallel astro visualizer with Equalizer</em> (engineering project), NTU Singapore (2012 - 2013)</li> 
  <li>Rahul Mukhi : <em>Point based simplification methods</em>, University of Zürich (2010 - 2011)</li> 
 </ul> 
-<h5><span class="fontSize" style="font-size: 16px; line-height: inherit; letter-spacing: inherit;">Bachelor thesis Supervision:</span></h5> 
+
+
+<h5><span class="fontSize" style="font-size: 16px; line-height: inherit; letter-spacing: inherit;style=color: rgb(100, 134, 255);">Bachelor thesis Supervision:</span></h5> 
 <p><u>Current (2025):</u></p> 
 <ul> 
 
