--- a/Supervision.html
+++ b/Supervision.html
@@ -38,7 +38,7 @@
 	<meta name="twitter:image:alt" content="prashantgoswami">
 	
 
-<title>Supervision - prashantgoswami</title>
+<title>Supervision &amp; Hosting - prashantgoswami</title>
 <link rel="shortcut icon" href="http://www.prashantgoswami.eu/img/favicon.ico">
 <link rel="stylesheet" href="./Supervision_files/skin-reset.css">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
