--- a/Supervision.html
+++ b/Supervision.html
@@ -6191,6 +6191,12 @@ function recaptchaOnload() {
 	    	<div class="container">
 				<div id="content-wrapper" class="container-wrapper">
 					<div id="el-124109" class="element text-element  "> 
+		<div class="text-content"><h4><strong><font style="vertical-align: inherit;color:#641E16"><font style="vertical-align: inherit;">Hosting/Inviting</font></font></strong></h4> 
+		<ul> 
+		<li><span class="fgColor" style="color:#0026fb;"><a data-linkto="{&quot;type&quot;:&quot;Url&quot;,&quot;src&quot;:&quot;https://maverick.inria.fr/~Romain.Vergne/blog/,&quot;inNewWin&quot;:true}" href="https://maverick.inria.fr/~Romain.Vergne/blog/" target="_blank">Dr. Romain Vergne</a></span>&nbsp;[<span class="fgColor" style="color:#0086ff;"><a class="link" data-linkto="{&quot;type&quot;:&quot;Url&quot;,&quot;src&quot;:&quot;http://bth.diva-portal.org/smash/record.jsf?dswid=-6318&amp;pid=diva2%3A1260232&amp;c=6&amp;searchType=SIMPLE&amp;language=en&amp;query=bin+sun&amp;af=%5B%5D&amp;aq=%5B%5B%5D%5D&amp;aq2=%5B%5B%5D%5D&amp;aqe=%5B%5D&amp;noOfRows=50&amp;sortOrder=author_sort_asc&amp;sortOrder2=title_sort_asc&amp;onlyFullText=false&amp;sf=all&quot;,&quot;inNewWin&quot;:true}" href="https://maverick.inria.fr/~Romain.Vergne/blog/" style="color: rgb(0, 134, 255);" target="_blank">Thesis</a></span>] (September 2017)</li> 
+		<li><span class="fgColor" style="color:#0026fb;"><a data-linkto="{&quot;type&quot;:&quot;Url&quot;,&quot;src&quot;:&quot;https://www.xing.com/profile/Bin_Sun26&quot;,&quot;inNewWin&quot;:true}" href="https://www.researchgate.net/profile/Yu-Fu-31" target="_blank">Yu Fu</a></span>&nbsp;[<span class="fgColor" style="color:#0086ff;"><a class="link" data-linkto="{&quot;type&quot;:&quot;Url&quot;,&quot;src&quot;:&quot;}" href="" style="color: rgb(0, 134, 255);" target="_blank">Thesis</a></span>] (Examiner/Supervisor, Sep 2024 - Jan 2025)</li> 
+		</ul> 
+		
 		<div class="text-content"><h4><strong><font style="vertical-align: inherit;color:#641E16"><font style="vertical-align: inherit;">Supervision</font></font></strong></h4> 
 <!--<p>I am the examiner for&nbsp;DV1478 (Bachelor thesis in Game Development) and TE2501 (Master thesis in Game Development).</p> -->
 <p>I am involved in the following supervision roles:</p> 
