--- a/index.html
+++ b/index.html
@@ -6221,7 +6221,7 @@ function recaptchaOnload() {
 					
 						<li style="height: 100%; width: 229px;">
 					
-							<a href="Supervision.html" class="menuPageLink "><div class="menulink-wrapper"><span class="text-wrapper">Supervision</span></div></a>
+							<a href="Supervision.html" class="menuPageLink "><div class="menulink-wrapper"><span class="text-wrapper">Host./Supervision</span></div></a>
 						</li></ul>
 	
 				</div>
