--- a/Publications.html
+++ b/Publications.html
@@ -6309,7 +6309,7 @@ function recaptchaOnload() {
 					
 						<li style="height: 100%; width: 229px;">
 					
-							<a href="Supervision.html" class="menuPageLink "><div class="menulink-wrapper"><span class="text-wrapper">Supervision</span></div></a>
+							<a href="Supervision.html" class="menuPageLink "><div class="menulink-wrapper"><span class="text-wrapper">People</span></div></a>
 						</li></ul>
 	
 				</div>
