--- a/Supervision.html
+++ b/Supervision.html
@@ -38,7 +38,7 @@
 	<meta name="twitter:image:alt" content="prashantgoswami">
 	
 
-<title>Supervision &amp; Hosting - prashantgoswami</title>
+<title>Hosting &amp; Supervision - prashantgoswami</title>
 <link rel="shortcut icon" href="http://www.prashantgoswami.eu/img/favicon.ico">
 <link rel="stylesheet" href="./Supervision_files/skin-reset.css">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
@@ -6069,7 +6069,7 @@ function recaptchaOnload() {
 					
 						<li class="active current" style="height: 100%; width: 229px;">
 					
-							<a href="Supervision.html" class="menuPageLink "><div class="menulink-wrapper"><span class="text-wrapper">Supervision</span></div></a>
+							<a href="Supervision.html" class="menuPageLink "><div class="menulink-wrapper"><span class="text-wrapper">People</span></div></a>
 						</li></ul>
 	
 				</div>
