--- a/Supervision.html
+++ b/Supervision.html
@@ -6191,7 +6191,7 @@ function recaptchaOnload() {
 	    	<div class="container">
 				<div id="content-wrapper" class="container-wrapper">
 					<div id="el-124109" class="element text-element  "> 
-		<div class="text-content"><h4><strong><font style="vertical-align: inherit;color:#641E16"><font style="vertical-align: inherit;">Hosting/Inviting</font></font></strong></h4> 
+		<div class="text-content"><h4><strong><font style="vertical-align: inherit;color:#641E16"><font style="vertical-align: inherit;">Hosting/Inviting Researchers</font></font></strong></h4> 
 		<ul> 
 		<li><span class="fgColor" style="color:#0026fb;"><a data-linkto="{&quot;type&quot;:&quot;Url&quot;,&quot;src&quot;:&quot;https://maverick.inria.fr/~Romain.Vergne/blog/,&quot;inNewWin&quot;:true}" href="https://maverick.inria.fr/~Romain.Vergne/blog/" target="_blank">Dr. Romain Vergne</a></span>&nbsp;[<span class="fgColor" style="color:#0086ff;"><a class="link" data-linkto="{&quot;type&quot;:&quot;Url&quot;,&quot;src&quot;:&quot;https://maverick.inria.fr/~Romain.Vergne/blog/:true}" href="https://maverick.inria.fr/~Romain.Vergne/blog/" style="color: rgb(0, 134, 255);" target="_blank">INRIA Grenoble</a></span>] (September 2017)</li> 
 		<li><span class="fgColor" style="color:#0026fb;"><a data-linkto="{&quot;type&quot;:&quot;Url&quot;,&quot;src&quot;:&quot;https://faculty.iitmandi.ac.in/~src/&quot;,&quot;inNewWin&quot;:true}" href="https://faculty.iitmandi.ac.in/~src/" target="_blank">Dr. Shubhajit Roy Chowdhury</a></span>&nbsp;[<span class="fgColor" style="color:#0086ff;"><a class="link" data-linkto="{&quot;type&quot;:&quot;Url&quot;,&quot;src&quot;:&quot;}" href="https://faculty.iitmandi.ac.in/~src/" style="color: rgb(0, 134, 255);" target="_blank">IIT Mandi</a></span>] (June 2022)</li> 
