--- a/Supervision.html
+++ b/Supervision.html
@@ -6222,6 +6222,15 @@ function recaptchaOnload() {
 </ul> 
 
 <p>&nbsp;</p> 
+<p><u>Hosted</u></p> 
+<ul> 
+ <li><span class="fgColor" style="color:#0026fb;"><a data-linkto="{&quot;type&quot;:&quot;Url&quot;,&quot;src&quot;:&quot;}" href="https://www.linkedin.com/in/tayyab-ateeq/?originalSubdomain=pk" target="_blank">Tayyab Ateeq</a></span>&nbsp;[<span class="fgColor" style="color:#0086ff;"><a class="link" data-linkto="{&quot;type&quot;:&quot;Url&quot;,&quot;src&quot;:&quot;}" href="query=bin%20sun&amp;af=[]&amp;aq=[[]]&amp;aq2=[[]]&amp;aqe=[]&amp;noOfRows=50&amp;sortOrder=author_sort_asc&amp;sortOrder2=title_sort_asc&amp;onlyFullText=false&amp;sf=all" style="color: rgb(0, 134, 255);" target="_blank">University of Calabria</a></span>] (Oct 2025 - Mar 2026)</li> 
+<!--<li><span class="fgColor" style="color:#0026fb;"><a data-linkto="{&quot;type&quot;:&quot;Url&quot;,&quot;src&quot;:&quot;https://www.xing.com/profile/Bin_Sun26&quot;,&quot;inNewWin&quot;:true}" href="https://www.researchgate.net/profile/Yu-Fu-31" target="_blank">Yu Fu</a></span>&nbsp;[<span class="fgColor" style="color:#0086ff;"><a class="link" data-linkto="{&quot;type&quot;:&quot;Url&quot;,&quot;src&quot;:&quot;}" href="" style="color: rgb(0, 134, 255);" target="_blank">Thesis</a></span>] (Examiner/Supervisor, Sep 2024 - Jan 2025)</li> -->
+</ul> 
+
+
+
+<p>&nbsp;</p> 
 <p><u>Others (Previous)</u></p> 
 <ul> 
  <li><span class="fgColor" style="color:#070efa;"><a data-linkto="{&quot;type&quot;:&quot;Url&quot;,&quot;src&quot;:&quot;https://scholar.google.com/citations?user=87g_0KgAAAAJ&amp;hl=en&quot;,&quot;inNewWin&quot;:true}" href="https://scholar.google.com/citations?user=87g_0KgAAAAJ&amp;hl=en" target="_blank"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Peng Cong</font></font></a></span><font style="vertical-align: inherit;"><font style="vertical-align: inherit;"> (Main supervisor 2022-2024, Co-supervised with Guohua Bai 2018-2022 , Discontinued 2025)</font></font></li> 
