--- a/Supervision.html
+++ b/Supervision.html
@@ -6208,7 +6208,7 @@ function recaptchaOnload() {
  <li><span class="fgColor" style="color:#070efa;"><a data-linkto="{&quot;type&quot;:&quot;Url&quot;,&quot;src&quot;:&quot;https://scholar.google.com/citations?user=AJO6YxYAAAAJ&hl=pt-BR/&amp;hl=en&quot;,&quot;inNewWin&quot;:true}" href="https://scholar.google.com/citations?user=AJO6YxYAAAAJ&hl=pt-BR" target="_blank"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Anderson Tavares</font></font></a></span><font style="vertical-align: inherit;"><font style="vertical-align: inherit;"> (HINTS, with others)(2025)</font></font></li>  
 </ul> 
 <p>&nbsp;</p> 
-<h5><span class="fontSize" style="font-size: 16px; line-height: inherit; letter-spacing: inherit;style=color: rgb(100, 134, 255);">PhD student:</span></h5> 
+<h5><span class="fontSize" style="font-size: 16px; line-height: inherit; letter-spacing: inherit;style=color: rgb(100, 134, 255);">PhD studentS:</span></h5> 
 <p><u>Current</u></p> 
 <ul> 
  <li><span class="fgColor" style="color:#070efa;"><a data-linkto="{&quot;type&quot;:&quot;Url&quot;,&quot;src&quot;:&quot;https://www.bth.se/eng/staff/nan-huang-nhl/&amp;hl=en&quot;,&quot;inNewWin&quot;:true}" href="https://www.bth.se/eng/staff/nan-huang-nhl/" target="_blank"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Nan Huang</font></font></a></span><font style="vertical-align: inherit;"><font style="vertical-align: inherit;"> (Main supervisor, co-supervised with V. Sundstedt, A. Cheddad, Y. Hu)(2023-now)</font></font></li> 
@@ -6245,7 +6245,7 @@ function recaptchaOnload() {
 </ul> 
 <p>&nbsp;</p> 
 
-<h5><span class="fontSize" style="font-size: 16px; line-height: inherit; letter-spacing: inherit;style=color: rgb(100, 134, 255);">Research Supervision:</span></h5> 
+<h5><span class="fontSize" style="font-size: 16px; line-height: inherit; letter-spacing: inherit;style=color: rgb(100, 134, 255);">Research SupervisionS:</span></h5> 
 <p><u>Current</u></p> 
 <ul> 
  <li><span class="fgColor" style="color:#070efa;"><a data-linkto="{&quot;type&quot;:&quot;Url&quot;,&quot;src&quot;:&quot;https://www.linkedin.com/in/venkata-sai-abhiram-akula-a41276217/?originalSubdomain=in/&amp;hl=en&quot;,&quot;inNewWin&quot;:true}" href="https://www.linkedin.com/in/venkata-sai-abhiram-akula-a41276217/?originalSubdomain=in" target="_blank"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Venkata Abhiram Akula</font></font></a></span><font style="vertical-align: inherit;"><font style="vertical-align: inherit;"> (BTH Sweden) 2025</font></font></li> 
@@ -6254,7 +6254,7 @@ function recaptchaOnload() {
 <p>&nbsp;</p> 
 
 
-<h5><span class="fontSize" style="font-size: 16px; line-height: inherit; letter-spacing: inherit;style=color: rgb(100, 134, 255);">Civilingenjör/Master thesis Supervision:</span></h5> 
+<h5><span class="fontSize" style="font-size: 16px; line-height: inherit; letter-spacing: inherit;style=color: rgb(100, 134, 255);">Civilingenjör/Master theses Supervision:</span></h5> 
 <p><u>Current (2025):</u></p> 
 <ul> 
  <li><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Oscar Milstein </font></font></li>
@@ -6311,7 +6311,7 @@ function recaptchaOnload() {
 </ul> 
 
 
-<h5><span class="fontSize" style="font-size: 16px; line-height: inherit; letter-spacing: inherit;style=color: rgb(100, 134, 255);">Bachelor thesis Supervision:</span></h5> 
+<h5><span class="fontSize" style="font-size: 16px; line-height: inherit; letter-spacing: inherit;style=color: rgb(100, 134, 255);">Bachelor theses Supervision:</span></h5> 
 <p><u>Current (2025):</u></p> 
 <ul> 
 
