--- a/Supervision.html
+++ b/Supervision.html
@@ -6245,7 +6245,7 @@ function recaptchaOnload() {
 </ul> 
 <p>&nbsp;</p> 
 
-<h5><span class="fontSize" style="font-size: 16px; line-height: inherit; letter-spacing: inherit;style=color: rgb(100, 134, 255);">Research SupervisionS:</span></h5> 
+<h5><span class="fontSize" style="font-size: 16px; line-height: inherit; letter-spacing: inherit;style=color: rgb(100, 134, 255);">Research Supervisions:</span></h5> 
 <p><u>Current</u></p> 
 <ul> 
  <li><span class="fgColor" style="color:#070efa;"><a data-linkto="{&quot;type&quot;:&quot;Url&quot;,&quot;src&quot;:&quot;https://www.linkedin.com/in/venkata-sai-abhiram-akula-a41276217/?originalSubdomain=in/&amp;hl=en&quot;,&quot;inNewWin&quot;:true}" href="https://www.linkedin.com/in/venkata-sai-abhiram-akula-a41276217/?originalSubdomain=in" target="_blank"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Venkata Abhiram Akula</font></font></a></span><font style="vertical-align: inherit;"><font style="vertical-align: inherit;"> (BTH Sweden) 2025</font></font></li> 
@@ -6254,7 +6254,7 @@ function recaptchaOnload() {
 <p>&nbsp;</p> 
 
 
-<h5><span class="fontSize" style="font-size: 16px; line-height: inherit; letter-spacing: inherit;style=color: rgb(100, 134, 255);">Civilingenjör/Master theses Supervision:</span></h5> 
+<h5><span class="fontSize" style="font-size: 16px; line-height: inherit; letter-spacing: inherit;style=color: rgb(100, 134, 255);">Civilingenjör/Master theses Supervisions:</span></h5> 
 <p><u>Current (2025):</u></p> 
 <ul> 
  <li><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Oscar Milstein </font></font></li>
@@ -6311,7 +6311,7 @@ function recaptchaOnload() {
 </ul> 
 
 
-<h5><span class="fontSize" style="font-size: 16px; line-height: inherit; letter-spacing: inherit;style=color: rgb(100, 134, 255);">Bachelor theses Supervision:</span></h5> 
+<h5><span class="fontSize" style="font-size: 16px; line-height: inherit; letter-spacing: inherit;style=color: rgb(100, 134, 255);">Bachelor theses Supervisions:</span></h5> 
 <p><u>Current (2025):</u></p> 
 <ul> 
 
